--- a/client.htm
+++ b/client.htm
@@ -290,16 +290,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-104477.htm" title="PHP 全局空间">PHP 全局空间</a></li>
-                        <li class="py-2"><a href="/news/article-88766.htm" title="宠物食品批发网站有哪些（宠物食品批发商）">宠物食品批发网站有哪些（宠物食品批发商）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-12-free-node-subscribe-links.htm" title="4月12日→21.1M/S|2025年最新免费节点Sockscap64订阅链接地址">4月12日→21.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-87315.htm" title="动物疫苗接种简报标题新颖（动物预防接种计划表）">动物疫苗接种简报标题新颖（动物预防接种计划表）</a></li>
-                        <li class="py-2"><a href="/news/article-97654.htm" title="动物疫苗不冷藏可以放多久（动物疫苗未冷藏几小时失效）">动物疫苗不冷藏可以放多久（动物疫苗未冷藏几小时失效）</a></li>
-                        <li class="py-2"><a href="/news/article-85880.htm" title="深度学习Pytorch——神经网络">深度学习Pytorch——神经网络</a></li>
-                        <li class="py-2"><a href="/news/article-99910.htm" title="宠物买卖交易合法吗（宠物买卖交易合法吗安全吗）">宠物买卖交易合法吗（宠物买卖交易合法吗安全吗）</a></li>
+                        <li class="py-2"><a href="/news/article-97655.htm" title="广州宠物领养微信群号 广州宠物领养微信群号是多少">广州宠物领养微信群号 广州宠物领养微信群号是多少</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-25-node-share.htm" title="5月25日→19M/S|2025年最新免费节点Sockscap64订阅链接地址">5月25日→19M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-22-free-high-speed-nodes.htm" title="5月22日→22.5M/S|2025年最新免费节点Sockscap64订阅链接地址">5月22日→22.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-12-free-high-speed-nodes.htm" title="5月12日→20.3M/S|2025年最新免费节点Sockscap64订阅链接地址">5月12日→20.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-5-17-node-share-links.htm" title="5月17日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址">5月17日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-106102.htm" title="宠物乐园怎么样（宠物乐园门票）">宠物乐园怎么样（宠物乐园门票）</a></li>
-                        <li class="py-2"><a href="/news/article-99127.htm" title="宠物粮市场前景如何分析的（宠物粮行业）">宠物粮市场前景如何分析的（宠物粮行业）</a></li>
+                        <li class="py-2"><a href="/news/article-85881.htm" title="python 在sql语句中使用%s,%d,%f">python 在sql语句中使用%s,%d,%f</a></li>
+                        <li class="py-2"><a href="/news/article-102848.htm" title="Ubuntu安装开发者平台Backstage">Ubuntu安装开发者平台Backstage</a></li>
+                        <li class="py-2"><a href="/news/article-96204.htm" title="宠物粮食加工厂加盟电话地址是多少 宠物粮食加工厂加盟电话地址是多少号">宠物粮食加工厂加盟电话地址是多少 宠物粮食加工厂加盟电话地址是多少号</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-10-free-subscribe-node.htm" title="5月10日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址">5月10日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-88765.htm" title="兽医疫苗批号查询系统（兽用疫苗真伪查询）">兽医疫苗批号查询系统（兽用疫苗真伪查询）</a></li>
                     </ul>
     </div>
 </div>
@@ -311,7 +311,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">31</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                <h4><span class="badge" style="float: right;">36</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">87</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
