--- a/date/2025-04/index.htm
+++ b/date/2025-04/index.htm
@@ -275,16 +275,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-92438.htm" title="vue打包后整合到springboot项目、并打包成jar上传到Linux服务器运行【前后端分离开发、整体部署到Linux服务器】">vue打包后整合到springboot项目、并打包成jar上传到Linux服务器运行【前后端分离开发、整体部署到Linux服务器】</a></li>
-                        <li class="py-2"><a href="/news/article-88765.htm" title="兽医疫苗批号查询系统（兽用疫苗真伪查询）">兽医疫苗批号查询系统（兽用疫苗真伪查询）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-2-node-share-links.htm" title="4月2日→20M/S|2025年最新免费节点Sockscap64订阅链接地址">4月2日→20M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-28-free-subscribe-node.htm" title="4月28日→18.2M/S|2025年最新免费节点Sockscap64订阅链接地址">4月28日→18.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-22-free-high-speed-nodes.htm" title="5月22日→22.5M/S|2025年最新免费节点Sockscap64订阅链接地址">5月22日→22.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-97654.htm" title="动物疫苗不冷藏可以放多久（动物疫苗未冷藏几小时失效）">动物疫苗不冷藏可以放多久（动物疫苗未冷藏几小时失效）</a></li>
+                        <li class="py-2"><a href="/news/article-103643.htm" title="vue日期格式处理详解">vue日期格式处理详解</a></li>
+                        <li class="py-2"><a href="/news/article-101271.htm" title="沧州卖宠物的地方（沧州哪里有宠物店）">沧州卖宠物的地方（沧州哪里有宠物店）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-7-free-subscribe-node.htm" title="4月7日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址">4月7日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-12-free-node-subscribe-links.htm" title="4月12日→21.1M/S|2025年最新免费节点Sockscap64订阅链接地址">4月12日→21.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-105274.htm" title="适合初学者的C语言数据类型的讲解_C 语言">适合初学者的C语言数据类型的讲解_C 语言</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-5-2-node-share-links.htm" title="5月2日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址">5月2日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-9-free-node-subscribe-links.htm" title="4月9日→23M/S|2025年最新免费节点Sockscap64订阅链接地址">4月9日→23M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-13-node-share.htm" title="4月13日→21M/S|2025年最新免费节点Sockscap64订阅链接地址">4月13日→21M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-1-free-node-subscribe.htm" title="5月1日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址">5月1日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-91049.htm" title="集成神经网络的缺点是,各种神经网络的优缺点">集成神经网络的缺点是,各种神经网络的优缺点</a></li>
+                        <li class="py-2"><a href="/news/article-105275.htm" title="dellbios硬盘启动顺序（dell新版bios硬盘启动顺序如何变更为固态启动）">dellbios硬盘启动顺序（dell新版bios硬盘启动顺序如何变更为固态启动）</a></li>
+                        <li class="py-2"><a href="/news/article-104477.htm" title="PHP 全局空间">PHP 全局空间</a></li>
+                        <li class="py-2"><a href="/news/article-98399.htm" title="宠物领养平台论文绪论（宠物领养系统国内外现状）">宠物领养平台论文绪论（宠物领养系统国内外现状）</a></li>
                     </ul>
     </div>
 </div>
@@ -296,7 +296,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">31</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                <h4><span class="badge" style="float: right;">36</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">87</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
