--- a/date/2025-04/page-2.htm
+++ b/date/2025-04/page-2.htm
@@ -275,16 +275,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-103647.htm" title="使用etcd选举sdk实践master/slave故障转移_在线工具">使用etcd选举sdk实践master/slave故障转移_在线工具</a></li>
-                        <li class="py-2"><a href="/news/article-96203.htm" title="小型宠物粮食加工设备有哪些厂家（宠物粮食加工厂怎么起步）">小型宠物粮食加工设备有哪些厂家（宠物粮食加工厂怎么起步）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-4-free-high-speed-nodes.htm" title="5月4日→18.8M/S|2025年最新免费节点Sockscap64订阅链接地址">5月4日→18.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-110316.htm" title="tensorflow求导和梯度计算">tensorflow求导和梯度计算</a></li>
                         <li class="py-2"><a href="/news/article-107028.htm" title="驱虫给猫多少钱（驱虫猫多少钱一次）">驱虫给猫多少钱（驱虫猫多少钱一次）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-18-free-node-subscribe.htm" title="5月18日→18.2M/S|2025年最新免费节点Sockscap64订阅链接地址">5月18日→18.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-98398.htm" title="做宠物粮食生意好做吗现在怎么样 做宠物粮食生意好做吗现在怎么样了">做宠物粮食生意好做吗现在怎么样 做宠物粮食生意好做吗现在怎么样了</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-21-node-share-links.htm" title="5月21日→21.3M/S|2025年最新免费节点Sockscap64订阅链接地址">5月21日→21.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-93198.htm" title="SpringBoot中Starter的作用是什么">SpringBoot中Starter的作用是什么</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-24-free-node-subscribe-links.htm" title="4月24日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址">4月24日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-89500.htm" title="长沙狗狗领养中心 长沙狗狗领养中心在哪">长沙狗狗领养中心 长沙狗狗领养中心在哪</a></li>
-                        <li class="py-2"><a href="/news/article-106102.htm" title="宠物乐园怎么样（宠物乐园门票）">宠物乐园怎么样（宠物乐园门票）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-8-free-node-subscribe.htm" title="5月8日→19.9M/S|2025年最新免费节点Sockscap64订阅链接地址">5月8日→19.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-17-node-share-links.htm" title="5月17日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址">5月17日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-13-free-high-speed-nodes.htm" title="5月13日→20M/S|2025年最新免费节点Sockscap64订阅链接地址">5月13日→20M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-15-free-node-subscribe-links.htm" title="4月15日→22M/S|2025年最新免费节点Sockscap64订阅链接地址">4月15日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-94704.htm" title="动物疫苗研究员工资 动物疫苗研究员工资多少">动物疫苗研究员工资 动物疫苗研究员工资多少</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-5-node-share-links.htm" title="4月5日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址">4月5日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-94194.htm" title="动物疫苗市场竞争（动物疫苗行业）">动物疫苗市场竞争（动物疫苗行业）</a></li>
                     </ul>
     </div>
 </div>
@@ -296,7 +296,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">31</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                <h4><span class="badge" style="float: right;">36</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">87</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
